samples/_failures_safe/1761438808_42163a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_53bfdc1a.c: In function ‘main’:
./samples/SAFE/__tmp_53bfdc1a.c:162:9: error: expected declaration or statement at end of input
  162 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_53bfdc1a.c:162:9: error: expected declaration or statement at end of input
